...
        android:background="@drawable/background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subject_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layoutManager="GridLayoutManager"
                app:spanCount="2"
                tools:listitem="@layout/subject_item"/>
...
                    android:layout_below="@+id/no_da"
                    android:textColor="@color/black"
                    android:text="@string/no_recently_watched_video"  />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recently_watched_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/recentlyWatchedText"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recently_item"/>
...
