...
            name="imageRequestListener"
            type="com.bumptech.glide.request.RequestListener&lt;Drawable>" />


    </data>
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
...
